--- a/src/main.tex
+++ b/src/main.tex
@@ -22,6 +22,6 @@ Write introduction here.
 A line with a citatoin~\cite{einstein1905}.
 
 \bibliographystyle{apsrev4-2}
-\bibliography{main}
+\bibliography{references}
 
 \end{document}
